# SpoinkStore

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  build.sh  configure  configure.ac  main.cpp  snapcraft.yaml  spoinkstore
AppDir/: AppRun  defualt.desktop
autom4te.cache/: output.0  output.2  requests  traces.2
